--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h2>Acces securise camera</h2>
-        <form action="superTornado.py" method="post">
+        <form action="../superTornado.py" method="post">
             ID : <input type="text" name="id"><br/>
             MDP : <input type="password" name="mdp">  <br/>
             <input type="submit" value="Connexion">
