modifié:         index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h2>Acces securise camera</h2>
-        <form action="/login" method="post">
+        <form action="./login" method="post">
             ID : <input type="text" name="id"><br/>
             MDP : <input type="password" name="mdp">  <br/>
             <input type="submit" value="Connexion">
