--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@ function fun(){
     alert("in fun()");
 
     var val=document.getElementById("txt");
-    var ws = new WebSocket("ws://localhost:8888");
+    var ws = new WebSocket("ws://192.168.1.23:80");
 
     ws.onopen = function(evt) { alert("Connection open ...");
     ws.send(val.value); };
