--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
         function WebSocketTest() {
             if ("WebSocket" in window) {
                 messageContainer.innerHTML = "WebSocket is supported by your Browser!";
-                var ws = new WebSocket("ws://localhost:8888/?Id=123456789");
+                var ws = new WebSocket("ws://192.168.1.23:80/?Id=123456789");
                 ws.onopen = function() {
                     ws.send("Message to send");
                 };
