modifié:         illegal.html 	modifié:         superTornado.py

--- a/illegal.html
+++ b/illegal.html
@@ -9,8 +9,8 @@
         <h2>Acces securise camera</h2>
         <form action="/unauthorized" method="post">
             <p>Forcer l'acces a la camera :</p>
-            Oui <input type="radio" name="illegalAccess">
-            Non : <input type="radio" name="illegalAccess">  <br/>
+            Oui : <input type="radio" name="illegalAccess" value=1>
+            Non : <input type="radio" name="illegalAccess" value= 2 checked="checked">  <br/>
             <input type="submit" value="Valider">
         </form>
     </body>
