modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h2>Vue camera</h2>
-        <img href="image/temp.jpg"
+        <img href="image/temp.jpg" alt="image camera" />
     </body>
 </html>
