modifié:         superTornado.py 	modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -4,9 +4,21 @@
         <meta charset="utf8" />
         <link rel="stylesheet" type="text/css" href="style/styles.css">
         <title>Acces camera</title>
+        <script type="text/javascript" >
+
+              $(document).ready( function() {
+                $.ajax({
+                type: "POST",
+                url:'/ajax',
+                contentType: "image/jpg",
+                success: function(data){
+                $('.image').html('<img src="data:image/png;base64,' + data + '" />'); },
+            } );
+
+        </script>
     </head>
     <body>
         <h2>Vue camera</h2>
-        <img href="image/temp.jpg" alt="image camera" />
+        <div id="image"></div>
     </body>
 </html>
