--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
         <meta charset="utf8" />
         <link rel="stylesheet" type="text/css" href="style/styles.css">
         <title>Acces camera</title>
-        <script src="js/jquery-2.1.0.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" >
 
             $(document).ready( function() {
