--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
                 url:'/ajax',
                 contentType: "image/jpg",
                 success: function(data){
-                $('#image').('<img src="data:image/png;base64,' + data + '" />'); }
+                $('#image').html('<img src="data:image/png;base64,' + data + '" />'); }
                 });
 
             })
