modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -21,6 +21,6 @@
     </head>
     <body>
         <h2>Vue camera</h2>
-        <iframe content= id="image"></iframe>
+        <iframe id="image"></iframe>
     </body>
 </html>
