--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
                 $.ajax({
                 type: "POST",
                 url:'/ajax',
-                contentType: "image/jpg",
+                contentType: "image/jpeg",
                 success: function(data){
                 $('#image').html(data)}
                 });
