modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -21,6 +21,6 @@
     </head>
     <body>
         <h2>Vue camera</h2>
-        <object id="image" codetype="image/jpeg"></object>
+        <object id="image" type="image/jpeg"></object>
     </body>
 </html>
