--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
                 url:'/ajax',
                 contentType: "image/jpeg",
                 success: function(data){
-                $('#image').html("<img src='data:image/jpeg;base64,"+data+">");?)}
+                $('#image').html("<img src='data:image/jpeg;base64,"+data+"'>");?)}
                 });
 
             })
