--- a/video.html
+++ b/video.html
@@ -8,12 +8,14 @@
         <script type="text/javascript" >
 
             $(document).ready( function() {
+
                 $.ajax({
                 type: "POST",
                 url:'/ajax',
                 contentType: "image/jpeg",
                 success: function(data){
-                $('#image').html("<img src='data:image/jpeg;base64,"+data+"'>");?)}
+                var str = "<img src='data:image/jpeg;base64,"+data+"'>";
+                $('#image').html(str);?)}
                 });
 
             })
