modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -15,7 +15,7 @@
                 contentType: "image/jpeg",
                 success: function(data){
                 var str = "<img src='data:image/jpeg;base64,"+data+"'>";
-                $('#image').html(str);)}
+                $('#image').html(str);}
                 });
 
             })
