modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" >
 
-            $(document).ready( function() {
+            function refresh() {
 
                 $.ajax({
                 type: "POST",
@@ -18,7 +18,11 @@
                 $('#image').html(str);}
                 });
 
-            })
+            }
+
+            setInterval(refresh(), 1500);
+
+
         </script>
     </head>
     <body>
