modifié:         superTornado.py 	modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -27,5 +27,8 @@
     <body>
         <h2>Vue camera</h2>
         <div class="image"></div>
+        <form action="/disconnection" method="post">
+            <input type="submit" value="Deconnexion">
+        </form>
     </body>
 </html>
