--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         <title>Acces camera</title>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" >
-            var = new WebSocket ("ws://192.168.1.23/test");
+            var ws = new WebSocket ("ws://192.168.1.23/test");
             function refresh() {
                 ws.send("next");
             }
