modifié:         test.html

--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
             var str = "<img src='data:image/jpeg;base64,"+evt.data+"'>";
                 $('.image').html(str);
             }
+            ws.onopen;
             $(document).ready(refresh())
             setInterval('refresh()', 2000);
         </script>
