--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" >
             var ws = new WebSocket ("ws://192.168.1.23/test");
             function refresh() {
-                ws.send("next");
+                ws.writemessage("next")= function(evt){;};
             }
             ws.onmessage = function (evt) {
             var str = "<img src='data:image/jpeg;base64,"+evt.data+"'>";
