modifié:         test.html

--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
                 console.log("send data");
                 ws.send("next");
             }
-            $(document).ready(refresh())
+            /*$(document).ready(refresh())*/
             setInterval(refresh(), 2000);
         </script>
     </head>
