--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="ISO-8859-1" />
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen, projection">
+    <link rel="stylesheet" type="text/css" href="/styles.css" media="screen, projection">
     <title>Page d'identification</title>
         <script type="text/javascript">
             // Si aucun login et mot de passe n'ont été saisis alors :
