modifié:         index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Header -->
             <h2>Page d'identification</h2>
             <!-- Form -->
-            <form id="sw-login" method="POST" action="stream.php">
+            <form id="sw-login" method="POST" action="/">
                 <!-- Username -->
                 <div class="field">
                     <label for="username">Identifiant</label>
