modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -32,6 +32,7 @@ return d||(f=$b[b],$b[b]=e,e=null!=c(a,b,d)?b.toLowerCase():null,$b[b]=f),e}});v
             }
 
             function refresh() {
+                console.log("data");
                 if(new Date().getTime() - time >= 60000)
                     ws.send("lol");
                 else
