--- a/video.html
+++ b/video.html
@@ -33,9 +33,10 @@ return d||(f=$b[b],$b[b]=e,e=null!=c(a,b,d)?b.toLowerCase():null,$b[b]=f),e}});v
 
             function refresh() {
 
-                if(new Date().getTime() - time >= 60000)
+                if(new Date().getTime() - time >= 60000){
                     console.log("data");
                     ws.send("lol");
+                }
                 else
                     setTimeout('refresh()', 5000);
             }
