--- a/video.html
+++ b/video.html
@@ -26,7 +26,7 @@ return d||(f=$b[b],$b[b]=e,e=null!=c(a,b,d)?b.toLowerCase():null,$b[b]=f),e}});v
                 ws.close();
             };
             function refresh() {
-                console.log("Data send);
+                console.log("Data send");
                 ws.send("lol");
             }
 
