modifié:         superTornado.py 	modifié:         video.html

--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@ return d||(f=$b[b],$b[b]=e,e=null!=c(a,b,d)?b.toLowerCase():null,$b[b]=f),e}});v
                 }
                 else {
                     console.log("data NOK !");
-                    var str = "<p>Erreur : image camera indisponilbe</p>";
+                    var str = "<p>Erreur : image camera indisponible</p>";
                 }
                 $('.image').html(str);
             }
