--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <style>
+    <!--style>
     *{margin:0;padding:0;}
     html{font-size:100%;}
     body{background:#fff;color:#222;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;text-align:center;font-size:75%;}
@@ -13,9 +13,10 @@
     #login-form .field{width:335px;margin:15px 0;}
     #login-form .field label{color:#777;display:block;font-size:1em;font-weight:700;margin-bottom:5px;text-align:left;}
     #login-form .field input{border:1px solid #ccc;font-size:1.2em;width:100%;padding:5px;}
-    </style>
+    </style-->
     <meta charset="ISO-8859-1" />
     <title>Page d'identification</title>
+    <link rel="stylesheet" type="text/css" href="style/styles.css">
         <script type="text/javascript">
             // Si aucun login et mot de passe n'ont été saisis alors :
             function checkForm(form) {
