modifié:         superTornado.py 	modifié:         v/video.html

--- a/v/video.html
+++ b/v/video.html
@@ -30,7 +30,7 @@
             };
             function refresh() {
                 console.log("Data send");
-                ws.send("lol");
+                ws.send("next");
             }
         </script>
     </head>
