--- a/v/video.html
+++ b/v/video.html
@@ -6,7 +6,7 @@
         <title>Acces camera</title>
         <script src="js/jquery-2.1.0.min.js"></script>
         <script >
-            var ws = new WebSocket ("ws://192.168.1.12/socket");
+            var ws = new WebSocket ("ws://192.168.1.12/video");
             ws.onmessage = function (evt) {
                 console.log("data receive");
                 if(evt.data != "error") {
