--- a/v/index.html
+++ b/v/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Page d'identification</title>
     <link rel="stylesheet" type="text/css" href="style/styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/gif" href="images/favicon.gif" />
         <script type="text/javascript">
             // Si aucun login et mot de passe n'ont été saisis alors :
             function checkForm(form) {
