modifié:         m/fichier/conf 	modifié:         m/loadConf.py 	modifié:         m/log.py 	modifié:         m/login.py 	modifié:         superTornado.py 	nouveau fichier: test/AllowTest 	nouveau fichier: test/ConfTest 	nouveau fichier: test/MiEmulator.py 	nouveau fichier: test/a 	nouveau fichier: test/botTest.py 	nouveau fichier: test/mfp.cookies 	nouveau fichier: test/testFichier.py 	nouveau fichier: test/testMISignaux.py 	modifié:         v/illegal.html 	modifié:         v/index.html

--- a/v/illegal.html
+++ b/v/illegal.html
@@ -6,7 +6,7 @@
         <title>Acces camera</title>
     </head>
     <body>
-        <h2>Acces securise camera</h2>
+        <h2>Acces non autorisé camera</h2>
         <form action="/unauthorized" method="post">
             <p>Forcer l'acces a la camera :</p>
             Oui : <input type="radio" name="illegalAccess" value=1>
