--- a/v/index.html
+++ b/v/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="shortcut icon" type="image/gif" href="images/favicon.gif" />
         <script type="text/javascript">
-            // Si aucun login et mot de passe n'ont été saisis alors :
+            // Si aucun login et mot de passe n'ont Ã©tÃ© saisis alors :
             function checkForm(form) {
                 if(form.username.value == "" && form.password.value == "") {
                     alert('Veuillez saisir votre login et votre mot de passe svp !')
